(4.2.5p199) 2009/08/09 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1279] Cleanup for warnings from Veracode static analysis.
(4.2.5p198) 2009/08/03 Released by Harlan Stenn <stenn@ntp.org>
* Upgrade to autogen-5.9.9-pre5.
(4.2.5p197) 2009/07/30 Released by Harlan Stenn <stenn@ntp.org>
* The build script now has . at the end of PATH for config.guess.
(4.2.5p196) 2009/07/29 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1272] gsoc_sntp IPv6 build problems under HP-UX 10.
* [Bug 1273] CID 10: Palisade leaks unit struct in error path.
* [Bug 1274] CID 67: ensure resolve_hosts() output count and pointers
  are consistent.
* [Bug 1275] CID 45: CID 46: old sntp uses uninitialized guesses[0],
  precs[0].
* [Bug 1276] CID 52: crypto_xmit() may call crypto_alice[23]()
  with NULL peer.
(4.2.5p195) 2009/07/27 Released by Harlan Stenn <stenn@ntp.org>
* cvo.sh: Add support for CentOS, Fedora, Slackware, SuSE, and QNX.
(4.2.5p194) 2009/07/26 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Use scripts/cvo.sh in the build script to get better subdir names.
(4.2.5p193) 2009/07/25 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1261] CID 34: simulate_server() rbuf.msg_flags uninitialized.
* [Bug 1262] CID 35: xpkt.mac uninitialized in simulate_server().
* [Bug 1263] CID 37: CID 38: CID 40: CID 43: multiple refclocks 
  uninitialized tm_zone (arc, chronolog, dumbclock, pcf).
* [Bug 1264] CID 64: gsoc_sntp on_wire() frees wrong ptr receiving KoD.
* [Bug 1265] CID 65: CID 66: gsoc_sntp on_wire() leaks x_pkt, r_pkt.
* [Bug 1266] CID 39: datum_pts_start() uninitialized arg.c_ospeed.
* [Bug 1267] CID 44: old sntp handle_saving() writes stack garbage to
  file when clearing.
* [Bug 1268] CID 63: resolve_hosts() leaks error message buffer.
* [Bug 1269] CID 74: use assertion to ensure move_fd() does not return
  negative descriptors.
* [Bug 1270] CID 70: gsoc_sntp recv_bcst_data mdevadr.ipv6mr_interface
  uninitialized.