@@ -1,0 +1,2 @@
+LANGUAGE 0x9,0x1
+1 11 "MSG00001.bin"
