@@ -1,3 +1,7 @@
+* [Bug 1281] Build ntpd on Windows without big SDK download, burn,
+  and install by checking in essentially unchanging messages.mc build
+  products to avoid requiring mc.exe, which is not included with VC++
+  2008 EE.
 (4.2.5p199) 2009/08/09 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1279] Cleanup for warnings from Veracode static analysis.
 (4.2.5p198) 2009/08/03 Released by Harlan Stenn <stenn@ntp.org>
